# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  database.py
page_analyzer/models/: url.py
page_analyzer/templates/layouts/: application.html
page_analyzer/templates/partials/: navigation.html
page_analyzer/templates/views/: 404.html  index.html  url.html  urls.html
